allow intervals for size estimates, doc in progress

--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -1428,6 +1428,9 @@ the order of magnitude of the cardinal of the type:
 where $n$ is an integer
 (like the set of bitstrings of length $n$).
 
+\texttt{size$\textit{min}$\_$\textit{max}$} means that  cardinal is about $2^n$,
+where $n$ is an integer
+
 \item \texttt{pcoll$n$} means that $\texttt{Pcoll1rand}(T)$ is about
   $2^{-n}$, where $n$ is an integer.  ($\texttt{Pcoll1rand}(T)$ is the
   probability of collision between a random element chosen according
