--- a/TODO
+++ b/TODO
@@ -17,11 +17,6 @@ and replace later by the real list of indices when I have it?
 Or pass the indices of M' as argument? But for that, I need to know
 to indices introduced by is_indep.
 
-Allow giving an interval for size and probability estimates, e.g.
-size<min>_<max> pcoll<min>_<max> pest<min>_<max>?
-That would be fairly easy given how I use the estimates, but may
-not be essential.
-
 Put the basic proba functions of polynom.ml in a separate module? (to
 avoid confusion between proba fcts and polynom fcts)
 
@@ -4285,3 +4280,9 @@ DONE 17/9/2019
 In facts.ml: Terms.get_pcoll1 b1.btype High <= -1
 or <= !Settings.tysize_MIN_Manual_Coll_Elim ? I used the latter for now.
 
+Allow giving an interval for size and probability estimates, e.g.
+size<min>_<max> pcoll<min>_<max> pest<min>_<max>?
+That would be fairly easy given how I use the estimates, but may
+not be essential.
+DONE for size<min>_<max>; for probabilities and size of parameters,
+we only give an upper bound.
