--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -1424,12 +1424,11 @@ so \texttt{fixed} implies \texttt{bounded}.
 
 \item \texttt{size$n$} indicates
 the order of magnitude of the cardinal of the type:
-\texttt{size$n$} means that its cardinal is about $2^n$,
+\texttt{size$n$} means that its cardinal is $|T| = 2^n$,
 where $n$ is an integer
 (like the set of bitstrings of length $n$).
 
-\texttt{size$\textit{min}$\_$\textit{max}$} means that  cardinal is about $2^n$,
-where $n$ is an integer
+\texttt{size$\textit{min}$\_$\textit{max}$} means that  $2^{\textit{min}} \leq |T| 2^{\textit{max}}$, where $\textit{min}$ and $\textit{max}$ are integers.
 
 \item \texttt{pcoll$n$} means that $\texttt{Pcoll1rand}(T)$ is about
   $2^{-n}$, where $n$ is an integer.  ($\texttt{Pcoll1rand}(T)$ is the
