--- a/TODO
+++ b/TODO
@@ -17,6 +17,9 @@ and replace later by the real list of indices when I have it?
 Or pass the indices of M' as argument? But for that, I need to know
 to indices introduced by is_indep.
 
+test "allowed_collisions pest<n>"
+"size<min>_<max>"
+
 Put the basic proba functions of polynom.ml in a separate module? (to
 avoid confusion between proba fcts and polynom fcts)
 
