--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -1428,7 +1428,7 @@ the order of magnitude of the cardinal of the type:
 where $n$ is an integer
 (like the set of bitstrings of length $n$).
 
-\texttt{size$\textit{min}$\_$\textit{max}$} means that  $2^{\textit{min}} \leq |T| 2^{\textit{max}}$, where $\textit{min}$ and $\textit{max}$ are integers.
+\texttt{size$\textit{min}$\_$\textit{max}$} means that  $2^{\textit{min}} \leq |T| \leq 2^{\textit{max}}$, where $\textit{min}$ and $\textit{max}$ are integers.
 
 \item \texttt{pcoll$n$} means that $\texttt{Pcoll1rand}(T)$ is about
   $2^{-n}$, where $n$ is an integer.  ($\texttt{Pcoll1rand}(T)$ is the
