--- a/TODO
+++ b/TODO
@@ -25,7 +25,8 @@ index, use it for the indices of fresh variables for find_compos_bin,
 and replace later by the real list of indices when I have it...
 
 src/proba.ml:  | Maxlength(n,t) -> Maxlength(!whole_game, Terms.copy_term Terms.Links_Vars t) (* When add_proba_red is called, the variables in the reduction rule are linked to their corresponding term *)
-=> This comment is probably wrong now!!! Hence there might be a bug here...
+=> This comment is wrong now!!! there is a bug here...
+see examplesnd/test/pcoll_instantiation.cv
 
 test "allowed_collisions pest<n>"
 "size<min>_<max>"
