--- a/TODO
+++ b/TODO
@@ -27,6 +27,8 @@ and replace later by the real list of indices when I have it...
 src/proba.ml:  | Maxlength(n,t) -> Maxlength(!whole_game, Terms.copy_term Terms.Links_Vars t) (* When add_proba_red is called, the variables in the reduction rule are linked to their corresponding term *)
 => This comment is wrong now!!! there is a bug here...
 see examplesnd/test/pcoll_instantiation.cv
+strange that it instantiates x1 but not y1. It should instantiate both,
+but given the bug, I would expect it to instantiate none.
 
 test "allowed_collisions pest<n>"
 "size<min>_<max>"
