unsuccessful efforts to exhibit a bug

--- a/TODO
+++ b/TODO
@@ -4,6 +4,13 @@ actually a different content -- perhaps taking the maximum of the probabilities,
 or requiring that the probabilities match, would solve the issue,
 as in this situation the two collisions are applied with different
 values of the indices for the common variables.
+I do not manage to exhibit the bug:
+- in global_dep_anal, in case a variable has several definitions
+in the whole game, this is taken care of in its status using
+ProbaIndepCollOfVar and in Transf_globaldepanal.compute_probas.
+- in DepAnal2, the variables are replaced with their value.
+
+
 
 Apply collisions as well in the binary case of Simplify1.FindCompos.find_compos_gen
 (possibly by modifying function Simplify1.FindCompos.apply_eq_statements
